# loonix-tunes-linux

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  check_arch.ps1  create_pkg.sh  fix_ico.rs  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.pub  loonix-tunes.sh
.backup/: Pref.qml  PrefBase.qml
.cargo/: config.toml
.github/workflows/: release.yml
.skill/pref/: reportbug.md
assets/: eqpreset.json  fxpreset.json
loonix-tunes-1.0.0/: FETCH_HEAD  HEAD  config  packed-refs
loonix-tunes-1.0.0/objects/pack/: pack-932d88eb00c42e4b00cbefcd41d101b5b08c687d.idx  pack-932d88eb00c42e4b00cbefcd41d101b5b08c687d.rev
packaging/linux/: loonix-tunes.desktop
packaging/windows/: deploy.bat  installer.iss  loonix-tunes-setup.iss
packaging/windows/libs/: libfftw3-3.lib  rubberband.lib  sndfile.lib
qml/: Ui.qml  qml.qrc
qml/ui/: Dsp.qml  Eq.qml  Fx.qml  HeaderMenu.qml  LoonixDrawer.qml  Playlist.qml  PlaylistContextMenu.qml  Pref.qml  Preferences.qml  Tab.qml  TabContextMenu.qml  TabCustom.qml  TabFavorites.qml  TabMusic.qml  TabQueue.qml  ThemeSlider.qml  TrackInfo.qml  VstControl.qml  qmldir
qml/ui/components/: RenameDialog.qml  (+2 more)
src/: dbus_service.rs  main.rs
src/audio/: audio_bus.rs  audio_output.rs  audiooutput.rs  config.rs  dac.rs  decoder.rs  highres.rs  metadata.rs  mod.rs  playlist.rs  popup.rs  presets.rs  resample.rs  scanner.rs  vsthost.rs
src/core/: dspconfig.rs  library.rs  mod.rs  playback.rs
src/ui/: core.rs  dsp.rs  dspcontroller.rs  dspcontroller.rs.bak  mod.rs  playerbridge.rs  playlistcontextmenu.rs  queue.rs  theme.rs  updater.rs
(+92 files in other folders)
